# edk2-cmake

./: CMakeLists.txt  README.md
src/: main.c  stdafx.h
